# uc-projects-core

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md  testapp.cpp
include/: conio_nc.h  itoa.h
include/core/: Arrays.h  Bits.h  CStrings.h  Convert.h  Defer.h  Error.h  Event.h  EventHandler.h  Future.h  Lazy.h  LockGuard.h  Math.h  Nothing.h  Reflection.h  Sleep.h  StringBuilder.h  Tick.h  Try.h  itoa.h  reference_cast.h  shared_ptr.h  unique_ptr.h
include/core/async/: Eventual.h  Future.h  MainLoopDispatcher.h  Promise.h  Task.h
include/core/can/: CanInterface.h  Channel.h  ICanInterface.h  IsoTpSocket.h  ObdData.h  ObdTransceiver.h
include/core/can/elm/: ElmAtCommands.h  ElmCanInterface.h  ElmCommandInterpreter.h  ElmRuntimeConfiguration.h
include/core/can/obd/: ObdPidValue.h  ObdRequest.h  ObdTroubleCode.h  ObdValue.h  OnBoardDiagnostics.h  PidDefinitions.h  WellKnownDtcs.h  WellKnownPids.h
include/core/cli/: AnsiCharacters.h  Cat.h  CliProgram.h  CommandNotFound.h  Echo.h  LineEditor.h  Ls.h  Sgsh.h  StringMap.h  Ush.h
include/core/collections/: TemplatedMap.h  TemplatedStringMap.h
include/core/coop/: DispatcherTimer.h  Future.h  MainLoopDispatcher.h
include/core/events/: Observable.h  QueueingObservable.h
include/core/hw/: Pin.h  ShiftRegisterParallelOut.h  SimcomGsm.h
include/core/hw/spi/: ISpiChipSelector.h  SpiConnectionSettings.h  SpiDevice.h
include/core/io/: ConcurrentQueueingReaderWriter.h  ConsoleReader.h  ConsoleWriter.h  Directory.h  DirectoryInfo.h  File.h  FileSystem.h  FileSystemInfo.h  Path.h  QueueStream.h  Stream.h  StreamReader.h  StreamWriter.h  TextReader.h  TextWriter.h
include/core/io/ports/: SerialPort.h
include/core/net/canbus/: CanInterface.h  IsoTpSocket.h  ObdData.h  ObdTransceiver.h
include/core/platform/avr/: LockGuard.h  Locker.h  Sleep.h
include/core/platform/fsl/: Adc.h  FlexCanInterface.h  GpioOutput.h  PwmOutput.h  SerialPort.h
include/core/platform/pc/: FileSystemImpl.h  SerialPort.h  Sleep.h  Usb.h  UsbCan.h  UsbCanSeeed.h
include/core/threading/: AvrLocker.h  INativeMutex.h  LockGuard.h  PosixMutex.h  Sleep.h
include/fslCore/: Adc.h  FlexCanInterface.h  SerialPort.h  Uptime.h
include/hal/: env.h  irq.h  osapi.h  pinio.h  tick.h
include/io/: AbstractTextReader.h  AbstractTextWriter.h  ConsoleReader.h  ConsoleWriter.h  Stream.h  StreamWriter.h
lib/iso15765-canbus/: README.md
lib/iso15765-canbus/src/: lib_iso15765.c  lib_iso15765.h
src/platform/: env.cpp  osapi.cpp
src/platform/avr/: tick.cpp
src/platform/fsl/: env.cpp  tick.cpp
src/platform/pc/: env.cpp
src/platform/pc/linux/: osapi.cpp  (+1 more)
(+14 files in other folders)
