cmake_minimum_required(VERSION 3.19)
project(uc-core)

set(CMAKE_CXX_STANDARD 17)
add_compile_options(-Wall -Wextra -Wpedantic -Wno-unused-parameter -Werror)

include_directories(include)
include_directories(lib)
include_directories(lib/etl/include)

set_source_files_properties(lib/iso15765-canbus/src/lib_iso15765.c PROPERTIES COMPILE_FLAGS "-Wno-pedantic -Wno-implicit-fallthrough -O3 -Wfatal-errors -Wall -Werror -std=c11")

message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
add_compile_definitions(CORE_TESTAPP)
add_compile_definitions(ETL_NO_STL ETL_FORCE_STD_INITIALIZER_LIST)
add_executable(main main.cpp)
target_sources(main PUBLIC lib/iso15765-canbus/src/lib_iso15765.c lib/iso15765-canbus/src/lib_iqueue.c)
target_sources(main PUBLIC src/platform/env.cpp)
IF(WIN32)
    target_link_libraries(main setupapi.lib)
ELSEIF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    target_sources(main PUBLIC src/platform/pc/linux/tick.cpp)
    find_package(Curses QUIET)
    IF(Curses_FOUND)
        include_directories(${CURSES_INCLUDE_DIR})
    ENDIF()
    IF(Curses_FOUND)
        target_link_libraries(main ${CURSES_LIBRARIES})
    ENDIF()
ENDIF()

